# tool-orchestra-nemotron-8b

./: .env.example  .gitignore  LICENSE  README.md  handoff.md  pyproject.toml  requirements-dev.txt  requirements.txt
.claude/commands/: code-review.md  security-review.md  tdd.md
data/knowledge/: models_and_routing.md  tool_orchestra_overview.md  tools_reference.md
data/synthetic/: README.md  tasks.jsonl
docs/: 01_architecture.md  02_tools.md  PROGRESS.md
scripts/: ingest_knowledge.py  verify_models.py
src/: config.py  main.py
src/models/: base.py  gemini.py  lm_studio.py
src/orchestrator/: actions.py  loop.py  parser.py
src/orchestrator/nodes/: __init__.py
src/tools/: __init__.py  base.py  finish.py  local_search.py  python_sandbox.py  registry.py  web_search.py
src/tools/llm_tools/: __init__.py  gemini.py  phi4.py
tests/: conftest.py
tests/e2e/: test_graph_flow.py
tests/unit/: test_local_search.py  test_loop.py  test_web_search.py
